--- a/style-main.css
+++ b/style-main.css
@@ -2,7 +2,7 @@
     scroll-behavior: smooth;
 
     font-family: 'Poppins';
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
